--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "gulp": "^3.9.1",
     "gulp-clean-css": "^3.0.4",
     "gulp-file-include": "^1.1.0",
+    "gulp-htmlmin": "^3.0.0",
     "gulp-imagemin": "^3.2.0",
     "gulp-notify": "^3.0.0",
     "gulp-plumber": "^1.1.0",
@@ -38,6 +39,8 @@
     "watchify": "^3.9.0"
   },
   "dependencies": {
-
+    "express": "^4.15.2",
+    "mongodb": "^2.2.26",
+    "mongoose": "^4.9.9"
   }
 }
